syntax = "proto3";

package pingpong.streaming;

service PingPonger {
  rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Ping {
  oneof kind {
    DummyPing dummy = 1;
    TruePing true_ping = 2;
  }
}

message DummyPing {
  string message = 1;
}

message TruePing {
  string message = 1;
}

message Pong {
  uint32 pong = 1;
}
